@@ -59,21 +59,6 @@ using namespace WTF;
 #undef min
 #undef max
 
-/* Structure for building a chain of data that actually lives on the
-stack, for holding the values of the subject pointer at the start of each
-subpattern, so as to detect when an empty string has been matched by a
-subpattern - to break infinite loops. When NO_RECURSE is set, these blocks
-are on the heap, not on the stack. */
-
-struct eptrblock {
-  struct eptrblock* epb_prev;
-  const UChar* epb_saved_eptr;
-};
-
-/* Structure for remembering the local variables in a private frame */
-
-
-
 #ifndef USE_COMPUTED_GOTO_FOR_MATCH_RECURSION
 typedef int ReturnLocation;
 #else
@@ -89,7 +74,7 @@ struct MatchFrame {
         const UChar* eptr;
         const uschar* ecode;
         int offset_top;
-        eptrblock* eptrb;
+        const UChar* subpatternStart;
     } args;
     
     
@@ -116,7 +101,7 @@ struct MatchFrame {
         int save_offset2;
         int save_offset3;
         
-        eptrblock newptrb;
+        const UChar* subpatternStart;
     } locals;
 };
 
@@ -351,7 +336,7 @@ struct MatchStack {
         return new MatchFrame;
     }
     
-    inline void pushNewFrame(const uschar* ecode, eptrblock* eptrb, ReturnLocation returnLocation)
+    inline void pushNewFrame(const uschar* ecode, const UChar* subpatternStart, ReturnLocation returnLocation)
     {
         MatchFrame* newframe = allocateNextFrame();
         newframe->previousFrame = currentFrame;
@@ -359,7 +344,7 @@ struct MatchStack {
         newframe->args.eptr = currentFrame->args.eptr;
         newframe->args.offset_top = currentFrame->args.offset_top;
         newframe->args.ecode = ecode;
-        newframe->args.eptrb = eptrb;
+        newframe->args.subpatternStart = subpatternStart;
         newframe->returnLocation = returnLocation;
         size++;
 
@@ -448,7 +433,7 @@ static int match(UChar* eptr, const uschar* ecode, int offset_top, MatchData& md
     stack.currentFrame->args.eptr = eptr;
     stack.currentFrame->args.ecode = ecode;
     stack.currentFrame->args.offset_top = offset_top;
-    stack.currentFrame->args.eptrb = NULL;
+    stack.currentFrame->args.subpatternStart = 0;
     
     /* This is where control jumps back to to effect "recursion" */
     
@@ -467,11 +452,8 @@ RECURSE:
      the closing ket. When match() is called in other circumstances, we don't add to
      this stack. */
     
-    if (is_group_start) {
-        stack.currentFrame->locals.newptrb.epb_prev = stack.currentFrame->args.eptrb;
-        stack.currentFrame->locals.newptrb.epb_saved_eptr = stack.currentFrame->args.eptr;
-        stack.currentFrame->args.eptrb = &stack.currentFrame->locals.newptrb;
-    }
+    if (is_group_start)
+        stack.currentFrame->locals.subpatternStart = stack.currentFrame->args.subpatternStart;
     
     /* Now start processing the operations. */
     
@@ -500,7 +482,7 @@ RECURSE:
             NON_CAPTURING_BRACKET:
                 DPRINTF(("start bracket 0\n"));
                 do {
-                    RMATCH(2, stack.currentFrame->args.ecode + 1 + LINK_SIZE, stack.currentFrame->args.eptrb, match_isgroup);
+                    RMATCH(2, stack.currentFrame->args.ecode + 1 + LINK_SIZE, stack.currentFrame->args.subpatternStart, match_isgroup);
                     if (is_match)
                         RRETURN;
                     stack.currentFrame->args.ecode += getOpcodeValueAtOffset(stack.currentFrame->args.ecode, 1);
@@ -571,7 +553,7 @@ RECURSE:
                 stack.currentFrame->locals.saved_eptr = stack.currentFrame->args.eptr;
                 
                 do {
-                    RMATCH(9, stack.currentFrame->args.ecode + 1 + LINK_SIZE, stack.currentFrame->args.eptrb, match_isgroup);
+                    RMATCH(9, stack.currentFrame->args.ecode + 1 + LINK_SIZE, stack.currentFrame->args.subpatternStart, match_isgroup);
                     if (is_match)
                         break;
                     stack.currentFrame->args.ecode += getOpcodeValueAtOffset(stack.currentFrame->args.ecode, 1);
@@ -607,17 +589,17 @@ RECURSE:
                  opcode. */
                 
                 if (*stack.currentFrame->args.ecode == OP_KETRMIN) {
-                    RMATCH(10, stack.currentFrame->args.ecode + 1 + LINK_SIZE, stack.currentFrame->args.eptrb, 0);
+                    RMATCH(10, stack.currentFrame->args.ecode + 1 + LINK_SIZE, stack.currentFrame->args.subpatternStart, 0);
                     if (is_match)
                         RRETURN;
-                    RMATCH(11, stack.currentFrame->locals.prev, stack.currentFrame->args.eptrb, match_isgroup);
+                    RMATCH(11, stack.currentFrame->locals.prev, stack.currentFrame->args.subpatternStart, match_isgroup);
                     if (is_match)
                         RRETURN;
                 } else { /* OP_KETRMAX */
-                    RMATCH(12, stack.currentFrame->locals.prev, stack.currentFrame->args.eptrb, match_isgroup);
+                    RMATCH(12, stack.currentFrame->locals.prev, stack.currentFrame->args.subpatternStart, match_isgroup);
                     if (is_match)
                         RRETURN;
-                    RMATCH(13, stack.currentFrame->args.ecode + 1 + LINK_SIZE, stack.currentFrame->args.eptrb, 0);
+                    RMATCH(13, stack.currentFrame->args.ecode + 1 + LINK_SIZE, stack.currentFrame->args.subpatternStart, 0);
                     if (is_match)
                         RRETURN;
                 }
@@ -639,7 +621,7 @@ RECURSE:
                 BEGIN_OPCODE(BRAZERO):
                 {
                     stack.currentFrame->locals.next = stack.currentFrame->args.ecode + 1;
-                    RMATCH(14, stack.currentFrame->locals.next, stack.currentFrame->args.eptrb, match_isgroup);
+                    RMATCH(14, stack.currentFrame->locals.next, stack.currentFrame->args.subpatternStart, match_isgroup);
                     if (is_match)
                         RRETURN;
                     moveOpcodePtrPastAnyAlternateBranches(stack.currentFrame->locals.next);
@@ -651,7 +633,7 @@ RECURSE:
                 {
                     stack.currentFrame->locals.next = stack.currentFrame->args.ecode + 1;
                     moveOpcodePtrPastAnyAlternateBranches(stack.currentFrame->locals.next);
-                    RMATCH(15, stack.currentFrame->locals.next + 1 + LINK_SIZE, stack.currentFrame->args.eptrb, match_isgroup);
+                    RMATCH(15, stack.currentFrame->locals.next + 1 + LINK_SIZE, stack.currentFrame->args.subpatternStart, match_isgroup);
                     if (is_match)
                         RRETURN;
                     stack.currentFrame->args.ecode++;
@@ -667,12 +649,9 @@ RECURSE:
                 BEGIN_OPCODE(KETRMIN):
                 BEGIN_OPCODE(KETRMAX):
                 stack.currentFrame->locals.prev = stack.currentFrame->args.ecode - getOpcodeValueAtOffset(stack.currentFrame->args.ecode, 1);
-                stack.currentFrame->locals.saved_eptr = stack.currentFrame->args.eptrb->epb_saved_eptr;
-                
-                /* Back up the stack of bracket start pointers. */
-                
-                stack.currentFrame->args.eptrb = stack.currentFrame->args.eptrb->epb_prev;
-                
+                stack.currentFrame->args.subpatternStart = stack.currentFrame->locals.subpatternStart;
+                stack.currentFrame->locals.subpatternStart = stack.currentFrame->previousFrame->args.subpatternStart;
+
                 if (*stack.currentFrame->locals.prev == OP_ASSERT || *stack.currentFrame->locals.prev == OP_ASSERT_NOT || *stack.currentFrame->locals.prev == OP_ONCE) {
                     md.end_match_ptr = stack.currentFrame->args.eptr;      /* For ONCE */
                     md.end_offset_top = stack.currentFrame->args.offset_top;
@@ -730,17 +709,17 @@ RECURSE:
                  preceding bracket, in the appropriate order. */
                 
                 if (*stack.currentFrame->args.ecode == OP_KETRMIN) {
-                    RMATCH(16, stack.currentFrame->args.ecode + 1 + LINK_SIZE, stack.currentFrame->args.eptrb, 0);
+                    RMATCH(16, stack.currentFrame->args.ecode + 1 + LINK_SIZE, stack.currentFrame->args.subpatternStart, 0);
                     if (is_match)
                         RRETURN;
-                    RMATCH(17, stack.currentFrame->locals.prev, stack.currentFrame->args.eptrb, match_isgroup);
+                    RMATCH(17, stack.currentFrame->locals.prev, stack.currentFrame->args.subpatternStart, match_isgroup);
                     if (is_match)
                         RRETURN;
                 } else { /* OP_KETRMAX */
-                    RMATCH(18, stack.currentFrame->locals.prev, stack.currentFrame->args.eptrb, match_isgroup);
+                    RMATCH(18, stack.currentFrame->locals.prev, stack.currentFrame->args.subpatternStart, match_isgroup);
                     if (is_match)
                         RRETURN;
-                    RMATCH(19, stack.currentFrame->args.ecode + 1 + LINK_SIZE, stack.currentFrame->args.eptrb, 0);
+                    RMATCH(19, stack.currentFrame->args.ecode + 1 + LINK_SIZE, stack.currentFrame->args.subpatternStart, 0);
                     if (is_match)
                         RRETURN;
                 }
@@ -938,7 +917,7 @@ RECURSE:
                 
                 if (minimize) {
                     for (stack.currentFrame->locals.fi = min;; stack.currentFrame->locals.fi++) {
-                        RMATCH(20, stack.currentFrame->args.ecode, stack.currentFrame->args.eptrb, 0);
+                        RMATCH(20, stack.currentFrame->args.ecode, stack.currentFrame->args.subpatternStart, 0);
                         if (is_match)
                             RRETURN;
                         if (stack.currentFrame->locals.fi >= stack.currentFrame->locals.max || !match_ref(stack.currentFrame->locals.offset, stack.currentFrame->args.eptr, stack.currentFrame->locals.length, md))
@@ -958,7 +937,7 @@ RECURSE:
                         stack.currentFrame->args.eptr += stack.currentFrame->locals.length;
                     }
                     while (stack.currentFrame->args.eptr >= stack.currentFrame->locals.pp) {
-                        RMATCH(21, stack.currentFrame->args.ecode, stack.currentFrame->args.eptrb, 0);
+                        RMATCH(21, stack.currentFrame->args.ecode, stack.currentFrame->args.subpatternStart, 0);
                         if (is_match)
                             RRETURN;
                         stack.currentFrame->args.eptr -= stack.currentFrame->locals.length;
@@ -1038,7 +1017,7 @@ RECURSE:
                  the pointer while it matches the class. */
                 if (minimize) {
                     for (stack.currentFrame->locals.fi = min;; stack.currentFrame->locals.fi++) {
-                        RMATCH(22, stack.currentFrame->args.ecode, stack.currentFrame->args.eptrb, 0);
+                        RMATCH(22, stack.currentFrame->args.ecode, stack.currentFrame->args.subpatternStart, 0);
                         if (is_match)
                             RRETURN;
                         if (stack.currentFrame->locals.fi >= stack.currentFrame->locals.max || stack.currentFrame->args.eptr >= md.end_subject)
@@ -1073,7 +1052,7 @@ RECURSE:
                         stack.currentFrame->args.eptr += length;
                     }
                     for (;;) {
-                        RMATCH(24, stack.currentFrame->args.ecode, stack.currentFrame->args.eptrb, 0);
+                        RMATCH(24, stack.currentFrame->args.ecode, stack.currentFrame->args.subpatternStart, 0);
                         if (is_match)
                             RRETURN;
                         if (stack.currentFrame->args.eptr-- == stack.currentFrame->locals.pp)
@@ -1142,7 +1121,7 @@ RECURSE:
                 
                 if (minimize) {
                     for (stack.currentFrame->locals.fi = min;; stack.currentFrame->locals.fi++) {
-                        RMATCH(26, stack.currentFrame->args.ecode, stack.currentFrame->args.eptrb, 0);
+                        RMATCH(26, stack.currentFrame->args.ecode, stack.currentFrame->args.subpatternStart, 0);
                         if (is_match)
                             RRETURN;
                         if (stack.currentFrame->locals.fi >= stack.currentFrame->locals.max || stack.currentFrame->args.eptr >= md.end_subject)
@@ -1168,7 +1147,7 @@ RECURSE:
                         stack.currentFrame->args.eptr += length;
                     }
                     for(;;) {
-                        RMATCH(27, stack.currentFrame->args.ecode, stack.currentFrame->args.eptrb, 0);
+                        RMATCH(27, stack.currentFrame->args.ecode, stack.currentFrame->args.subpatternStart, 0);
                         if (is_match)
                             RRETURN;
                         if (stack.currentFrame->args.eptr-- == stack.currentFrame->locals.pp)
@@ -1313,7 +1292,7 @@ RECURSE:
                     if (minimize) {
                         stack.currentFrame->locals.repeat_othercase = othercase;
                         for (stack.currentFrame->locals.fi = min;; stack.currentFrame->locals.fi++) {
-                            RMATCH(28, stack.currentFrame->args.ecode, stack.currentFrame->args.eptrb, 0);
+                            RMATCH(28, stack.currentFrame->args.ecode, stack.currentFrame->args.subpatternStart, 0);
                             if (is_match)
                                 RRETURN;
                             if (stack.currentFrame->locals.fi >= stack.currentFrame->locals.max || stack.currentFrame->args.eptr >= md.end_subject)
@@ -1333,7 +1312,7 @@ RECURSE:
                             ++stack.currentFrame->args.eptr;
                         }
                         while (stack.currentFrame->args.eptr >= stack.currentFrame->locals.pp) {
-                            RMATCH(29, stack.currentFrame->args.ecode, stack.currentFrame->args.eptrb, 0);
+                            RMATCH(29, stack.currentFrame->args.ecode, stack.currentFrame->args.subpatternStart, 0);
                             if (is_match)
                                 RRETURN;
                             --stack.currentFrame->args.eptr;
@@ -1358,7 +1337,7 @@ RECURSE:
                     if (minimize) {
                         for (stack.currentFrame->locals.fi = min;; stack.currentFrame->locals.fi++) {
                             int nc;
-                            RMATCH(30, stack.currentFrame->args.ecode, stack.currentFrame->args.eptrb, 0);
+                            RMATCH(30, stack.currentFrame->args.ecode, stack.currentFrame->args.subpatternStart, 0);
                             if (is_match)
                                 RRETURN;
                             if (stack.currentFrame->locals.fi >= stack.currentFrame->locals.max || stack.currentFrame->args.eptr >= md.end_subject)
@@ -1381,7 +1360,7 @@ RECURSE:
                             stack.currentFrame->args.eptr += 2;
                         }
                         while (stack.currentFrame->args.eptr >= stack.currentFrame->locals.pp) {
-                            RMATCH(31, stack.currentFrame->args.ecode, stack.currentFrame->args.eptrb, 0);
+                            RMATCH(31, stack.currentFrame->args.ecode, stack.currentFrame->args.subpatternStart, 0);
                             if (is_match)
                                 RRETURN;
                             stack.currentFrame->args.eptr -= 2;
@@ -1484,7 +1463,7 @@ RECURSE:
                     if (minimize) {
                         int d;
                         for (stack.currentFrame->locals.fi = min;; stack.currentFrame->locals.fi++) {
-                            RMATCH(38, stack.currentFrame->args.ecode, stack.currentFrame->args.eptrb, 0);
+                            RMATCH(38, stack.currentFrame->args.ecode, stack.currentFrame->args.subpatternStart, 0);
                             if (is_match)
                                 RRETURN;
                             getCharAndAdvance(d, stack.currentFrame->args.eptr);
@@ -1515,7 +1494,7 @@ RECURSE:
                                 stack.currentFrame->args.eptr += length;
                             }
                             for (;;) {
-                                RMATCH(40, stack.currentFrame->args.ecode, stack.currentFrame->args.eptrb, 0);
+                                RMATCH(40, stack.currentFrame->args.ecode, stack.currentFrame->args.subpatternStart, 0);
                                 if (is_match)
                                     RRETURN;
                                 if (stack.currentFrame->args.eptr-- == stack.currentFrame->locals.pp)
@@ -1547,7 +1526,7 @@ RECURSE:
                     if (minimize) {
                         int d;
                         for (stack.currentFrame->locals.fi = min;; stack.currentFrame->locals.fi++) {
-                            RMATCH(42, stack.currentFrame->args.ecode, stack.currentFrame->args.eptrb, 0);
+                            RMATCH(42, stack.currentFrame->args.ecode, stack.currentFrame->args.subpatternStart, 0);
                             if (is_match)
                                 RRETURN;
                             getCharAndAdvance(d, stack.currentFrame->args.eptr);
@@ -1574,7 +1553,7 @@ RECURSE:
                                 stack.currentFrame->args.eptr += length;
                             }
                             for (;;) {
-                                RMATCH(44, stack.currentFrame->args.ecode, stack.currentFrame->args.eptrb, 0);
+                                RMATCH(44, stack.currentFrame->args.ecode, stack.currentFrame->args.subpatternStart, 0);
                                 if (is_match)
                                     RRETURN;
                                 if (stack.currentFrame->args.eptr-- == stack.currentFrame->locals.pp)
@@ -1714,7 +1693,7 @@ RECURSE:
                 
                 if (minimize) {
                     for (stack.currentFrame->locals.fi = min;; stack.currentFrame->locals.fi++) {
-                        RMATCH(48, stack.currentFrame->args.ecode, stack.currentFrame->args.eptrb, 0);
+                        RMATCH(48, stack.currentFrame->args.ecode, stack.currentFrame->args.subpatternStart, 0);
                         if (is_match)
                             RRETURN;
                         if (stack.currentFrame->locals.fi >= stack.currentFrame->locals.max || stack.currentFrame->args.eptr >= md.end_subject)
@@ -1880,7 +1859,7 @@ RECURSE:
                     /* stack.currentFrame->args.eptr is now past the end of the maximum run */
                     
                     for (;;) {
-                        RMATCH(52, stack.currentFrame->args.ecode, stack.currentFrame->args.eptrb, 0);
+                        RMATCH(52, stack.currentFrame->args.ecode, stack.currentFrame->args.subpatternStart, 0);
                         if (is_match)
                             RRETURN;
                         if (stack.currentFrame->args.eptr-- == stack.currentFrame->locals.pp)
@@ -1950,7 +1929,7 @@ RECURSE:
                     md.offset_vector[md.offset_end - stack.currentFrame->locals.number] = stack.currentFrame->args.eptr - md.start_subject;
                     
                     do {
-                        RMATCH(1, stack.currentFrame->args.ecode + 1 + LINK_SIZE, stack.currentFrame->args.eptrb, match_isgroup);
+                        RMATCH(1, stack.currentFrame->args.ecode + 1 + LINK_SIZE, stack.currentFrame->args.subpatternStart, match_isgroup);
                         if (is_match)
                             RRETURN;
                         stack.currentFrame->args.ecode += getOpcodeValueAtOffset(stack.currentFrame->args.ecode, 1);
